Add some more libs to try to get nodejs to build

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,9 @@ gcc-multilib
 git
 git-core
 iputils-ping
+libcrypto++-dev
 libsdl1.2-dev
+libssl-dev
 make
 python
 python3
@@ -25,3 +27,4 @@ unzip
 wget
 xterm
 xz-utils
+zlib1g-dev
